# gladix

./: .gitignore  README.md
agent/: Cargo.toml
agent/src/: cache.rs  config.rs  main.rs  scanner.rs
desktop-app/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
desktop-app/src/: App.css  App.tsx  index.css  main.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: main.rs
desktop-app/src/components/: app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  nav-documents.tsx  nav-main.tsx  section-cards.tsx  site-header.tsx
desktop-app/src/components/telemetry/: telemetry-table.tsx
desktop-app/src/pages/: Dashboard.tsx  DashboardBackup.tsx  Policies.tsx  Telemetry.tsx
kernel-driver/: Cargo.toml  README.md
kernel-driver/src/: consts.rs  core.rs  device.rs  dispatch.rs  helpers.rs  hooks.rs  lib.rs  security.rs
kernel-driver/src/callbacks/: mod.rs  psnotify.rs
kernel-driver/src/communications/: memory_ring.rs  mod.rs
kernel-driver/src/minifilter/: mod.rs  precreate.rs  sendmsg.rs
kernel-driver/src/wfp/: ale_flow.rs  mod.rs
kernel-driver/tests/: driver_mock.rs  ring_decoder.rs  ring_reader.c
ring_dump/: Cargo.toml
ring_dump/src/: main.rs
shared/: Cargo.toml  build.rs
shared/proto/: config.proto  events.proto
shared/src/: constants.rs  lib.rs
shared/src/proto_gen/: config.rs  events.rs
shared/tests/: config_grpc.rs  config_proto.rs
user-agent/: Cargo.toml  README.md  agent_config.toml  build.rs  config.toml  default.toml  telemetry.db
user-agent/resources/: event.proto  schema.sql
user-agent/src/: lib.rs  macros.rs  main.rs
user-agent/src/comms/: events.rs  fltmsg.rs  grpc.rs  ioctl.rs  listeners.rs  memory_ring.rs  mod.rs  router.rs
user-agent/src/config/: loader.rs  mod.rs  model.rs  types.rs
user-agent/src/db/: batch_inserts.rs  connection.rs  db_writer.rs  maintenance.rs  mod.rs
user-agent/src/etw/: sessions.rs
user-agent/src/intel/: pipeline.rs  yara.rs
user-agent/src/proto_gen/: agent_telemetry.rs  mod.rs
user-agent/src/scanner/: cache.rs  hash.rs  mod.rs  scheduler.rs  worker.rs
user-agent/tests/: db_integration.rs  db_tests.rs  event_tests.rs  listeners.rs  scanner_tests.rs
