[package]
name = "shared"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["std"]
std     = ["prost/std", "prost/derive"]
kernel  = ["prost/derive"]       # no_std + alloc


[build-dependencies]
tonic-build = "0.13.1"

[dependencies]
prost        = { version = "0.13", default-features = false }
prost-types  = { version = "0.13", default-features = false }


